--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -193,3 +193,17 @@ p {
   font-size: 0.875rem;
   margin-bottom: 0;
 }
+.thumbnail {
+  float: left;
+  width: 40%;
+  padding-top: 40%;
+  margin: 10px 5%;
+  border-radius: 50%;
+  box-shadow: 0px 5px 10px 0px rgba(50,50,50,.75);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  &:hover, &:active, &:focus {
+    box-shadow: 0 5px 5px 0 rgba(50,50,50,.75);
+  }
+}
