moved images to bucket

--- a/sass/_faith.scss
+++ b/sass/_faith.scss
@@ -33,7 +33,7 @@
   }
 }
 .faith_title {
-  background-image: image-url('faith.jpg');
+  background-image: image-url('//luke-aiello-5cnl.squarespace.com/assets/images/faith.jpg');
   background-position: left -70px;
   background-repeat: no-repeat;
   background-size: cover;
