--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -15,7 +15,7 @@
   left: 0;
   top: 50%;
   margin-top: -100px;
-  background: no-repeat center image-url('brain_icon.png');
+  background: no-repeat center url('//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png');
   background-size: contain;
   &:hover, &:active, &:focus {
     opacity: 0.8;
