initial commit of culture pulse scripting markup and styling

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,6 +8,7 @@
 @import "home";
 @import "faith";
 @import "consulting";
+@import "culture-pulse";
 @import "talentbank";
 @import "press";
 @import "the-team";
