--- a/sass/_faith.scss
+++ b/sass/_faith.scss
@@ -37,7 +37,7 @@
   background-position: left -70px;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 250px 10px 0;
+  padding: 250px 10px 5px;
   h2 {
     font-size: 3rem;
     color: #fff;
@@ -45,9 +45,12 @@
     font-weight: 200;
     line-height: 0.9;
     margin-bottom: 0;
+    letter-spacing: -0.5px;
   }
   h3 {
     font-size: 3rem;
+    font-family: $helvetica-bold;
+    font-weight: 600;
     color: $primary-blue;
     text-transform: uppercase;
     font-weight: bold;
