Mostly CSS changes

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,6 +1,11 @@
+.contact_content{
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 10px
+}
 .contact_form {
   legend {
-    display: block;
+    display: none;
     width: 100%;
     text-align: center;
     font-size: 18px;
@@ -42,8 +47,8 @@
   }
 }
 .map_image {
-  margin: 10px 0;
-  padding: 0 10px;
+  margin: 0;
+  padding: 0;
   a {
     display: block;
     border: 1px solid #dcdcdc;
@@ -59,13 +64,14 @@
 .contact_info {
   margin: 10px 0;
   padding: 0 10px;
+  line-height: 10px;
   p {
     text-transform: uppercase;
     letter-spacing: 4px;
     text-align: center;
     margin-bottom: 2px;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 8px;
   }
 }
 .contact_social {
