--- a/sass/_culture-pulse.scss
+++ b/sass/_culture-pulse.scss
@@ -55,6 +55,8 @@
     text-decoration: none;
 }
 .article_social {
+    text-align: right;
+    padding-right: 5px;
   a {
     display: inline-block;
     margin:0 0 8px 4px;
