--- a/sass/_talentbank.scss
+++ b/sass/_talentbank.scss
@@ -2,21 +2,21 @@
   padding: 0 20px;
 }
 .talentbank_headline {
-  font-family: $helvetica;
+  font-family: "Helvetica Ultra Light" !important;
   font-weight: 200;
-  font-size: 30px;
+  font-size: 28px;
   text-align: center;
-  line-height: 1.2;
+  line-height: 1;
   padding: 0 5px;
-  margin: 0 -10px 5px;
+  margin: 0 -10px 2px;
   letter-spacing: -0.5px;
 }
 .talentbank_description {
-  font-family: $helvetica;
+  font-family: "Helvetica Ultra Light" !important;
   font-weight: 200;
-  font-size: 20px;
+  font-size: 19px;
   text-align: center;
-  line-height: 1.2;
+  line-height: .9;
   padding: 0 5px;
   margin-bottom: 5px;
 }
