--- a/sass/_faith.scss
+++ b/sass/_faith.scss
@@ -72,24 +72,37 @@
   padding: 0 8px;
   font-size: 24px;
 }
+.videos {
+  overflow: hidden;
+}
 .video {
+  @include box-sizing(border-box);
+  padding: 5px;
+  width: 50%;
+  float: left;
   .poster {
-    margin-bottom: 0;
+    display: block;
+    width: 100%;
+    padding-top: 75%;
+    position: relative;
     img {
+      position: absolute;
       display: block;
       width: 100%;
       max-width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
     }
   }
   h2 {
-    padding: 0 5px;
     font-family: $helvetica-bold;
     font-weight: 600;
     font-size: 14px;
     margin-bottom: 0;
+    text-transform: uppercase;
   }
   h3 {
-    padding: 0 5px;
     font-family: $helvetica;
     font-size: 12px;
     font-weight: 200;
