Futurists sprite changes

--- a/sass/_talentbank.scss
+++ b/sass/_talentbank.scss
@@ -15,9 +15,9 @@
   font-family: "Helvetica Ultra Light" !important;
   font-weight: 200;
   font-size: 19px;
-  text-align: center;
+  text-align: justify;
   line-height: .9;
-  padding: 0 5px;
+  padding: 0 14px;
   margin-bottom: 5px;
 }
 .bios {
